fixing up login header on mobile

--- a/src/Components/AuthComponents/Login.css
+++ b/src/Components/AuthComponents/Login.css
@@ -180,9 +180,11 @@ box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
         width: 100vw;
         align-items: center;
         justify-content: center;
+        margin-top: 30px;
     }
     
     .title-container img {
+
         height: 70px;
         padding-bottom: 10px;
         border-bottom: 1px solid #FBF0A2;
@@ -190,9 +192,10 @@ box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     .title-container p{
         text-align: center;
         font-size: medium;
+        width: 95vw;
     }
     .login-second-section-container{
-        margin-top: 15px;
+        margin-top: 30px;
     }
     .login-second-section-main{
         flex-direction: column;
